--- a/BackEndCapstone/Views/Products/Index.cshtml
+++ b/BackEndCapstone/Views/Products/Index.cshtml
@@ -7,7 +7,7 @@
 }
 <div>
     <div style="text-align: center">
-        <img align="center" src="~/images//stringBeads2.png" alt="books" style="max-height: 300px; min-height: 200px; max-width:1300px; min-width:1100px;">  &nbsp;
+        <img align="center" src="~/images//stringBeads2.png" alt="product" style="max-height: 300px; min-height: 200px; max-width:1300px; min-width:1100px;">  &nbsp;
     </div>
 
 </div>
@@ -20,7 +20,7 @@
 
 
         <p>
-            <a class="btn btn-primary" asp-action="Create">Create New</a>
+            <a class="btn btn-primary btn-sm" asp-action="Create">Create New</a>
         </p>
         <br />
 
@@ -34,7 +34,7 @@
                         <img style="max-height: 260px; min-height: 230px;" class="card-img-top" src="@Url.Content("~/images/" + item.ImagePath)" alt="Card Img" />
                         <div class="card-body">
                             <h7 class="card-title">@item.Title</h7>
-                            <a asp-action="Details" class="btn btn-primary" asp-route-id="@item.Id">Details</a>
+                            <a asp-action="Details" class="btn btn-primary btn-sm" asp-route-id="@item.Id">Details</a>
                         </div>
 
 
