--- a/BackEndCapstone/Views/Shared/_Layout.cshtml
+++ b/BackEndCapstone/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Identity
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -38,6 +41,19 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="WishList">WishList</a>
                         </li>
                     </ul>
+                    @if (SignInManager.IsSignedIn(User))
+                    {
+                        <div>
+                            <form asp-controller="Products" asp-action="Index">
+                                <div class="input-group">
+                                    <input type="text" name="searchString" class="form-control" placeholder="Gemstones/Products/Product Types" />
+                                    <span class="input-group-btn">
+                                        <input type="submit" value="Search" class="btn btn-primary" />
+                                    </span>
+                                </div>
+                            </form>
+                        </div>
+                    }
                 </div>
             </div>
         </nav>
