--- a/BackEndCapstone/Views/Tutorials/Index.cshtml
+++ b/BackEndCapstone/Views/Tutorials/Index.cshtml
@@ -27,9 +27,9 @@
             <div class="row justify-content-between">
                 @foreach (var item in Model)
                 {
-                <div class="card tutorialCard"  style="width: 22rem; margin-bottom: 3rem; margin-left: 1.5rem">
+                <div class="card tutorialCard"  style="width: 22rem; margin-bottom: 3rem; margin-left: 1.5rem; align-content:center;">
                     <video width="320" height="240" >
-                        <source src="@Url.Content("~/videos/" + item.VideoPath)" type="video/mp4" style=" width: 20rem; margin-bottom: 3rem; margin-left: 1.5rem;">
+                        <source src="@Url.Content("~/videos/" + item.VideoPath)" type="video/mp4" style=" width: 20rem;">
                         </video>
                         <div class="card-body">
                             <h7 class="card-title">@item.Title</h7>
