--- a/BackEndCapstone/Views/Tutorials/Index.cshtml
+++ b/BackEndCapstone/Views/Tutorials/Index.cshtml
@@ -19,7 +19,7 @@
 
 
         <p>
-            <a class="btn btn-primary btn-sm" asp-action="Create">Create New</a>
+            <a class="btn btn-outline-danger btn-xxs" asp-action="Create">Create New</a>
         </p>
         <br />
 
@@ -33,7 +33,7 @@
                         </video>
                         <div class="card-body">
                             <h7 class="card-title">@item.Title</h7>
-                            <a asp-action="Details" class="btn btn-primary btn-sm" asp-route-id="@item.Id">Details</a>
+                            <a asp-action="Details" class="btn btn-outline-danger btn-xxs" asp-route-id="@item.Id">Details</a>
 
                         </div>
                 </div>
