ready for soft demo

--- a/BackEndCapstone/Views/Tutorials/Details.cshtml
+++ b/BackEndCapstone/Views/Tutorials/Details.cshtml
@@ -63,7 +63,7 @@
                         <br />
                     }
                 </div>
-                <a asp-controller="TutorialsReview" class="btn btn-outline-danger btn-xxs" asp-action="Create" asp-route-id="@Model.Id">Add Comment</a>                <br />
+                <a asp-controller="TutorialsReview" class="btn btn-primary  btn-sm" asp-action="Create" asp-route-id="@Model.Id">Add Comment</a>                <br />
             </div>
             <br />
         </div>
@@ -71,7 +71,6 @@
 
 
     </div>
-
 @if (user.Email == "admin@admin.com")
 {
         <div>
