--- a/BackEndCapstone/Views/Products/Details.cshtml
+++ b/BackEndCapstone/Views/Products/Details.cshtml
@@ -38,18 +38,21 @@
                         <h4><u>Gemstones Used:</u></h4>
                         @foreach (var item in Model.ProductGemstones)
                         {
-                            <tr>
-                                <td>
+                            <div class="row align-items-center">
+                                <h6>
                                     @Html.DisplayFor(modelItem => item.Gemstone.Title) &nbsp;
-                                </td>
-                                <td>
+                                </h6>
+                                <br />
+                               
                                     <a asp-controller="Gemstones" asp-action="Details" class="btn btn-outline-danger btn-xxs" asp-route-id="@item.GemstoneId">Gem info</a>
-                                </td>
-                            </tr>
+                                
+                                <br />
+                                </div>
                         }
+                            </div>
+                        
                     </div>
-                </div>
-
+               
                 <hr />
 
                 <div class="row align-items-center">
