--- a/BackEndCapstone/Views/Products/Details.cshtml
+++ b/BackEndCapstone/Views/Products/Details.cshtml
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="row align-items-center justify-content-between">
             <div class="col-6" style="width:500px">
-                <img style="max-height: 600px; min-height: 340px; " class="img-responsive" src="@Url.Content("~/images/" + Model.ImagePath)" alt="" />
+                <img style="max-height: 500px; min-height: 340px; max-width: 500px;" class="img-responsive" src="@Url.Content("~/images/" + Model.ImagePath)" alt="" />
             </div>
             <div class="col-6" style="width:500px">
                 <h1>
